2014-09-07  Titus Brown  <titus@idyll.org>

    * sandbox/collect-reads.py: added script to collect reads until specific
	average cutoff
    * sandbox/slice-reads-by-coverage.py: added script to extract reads with
	a specific coverage slice (based on median k-mer abundance)

2014-09-01  Michael R. Crusoe  <mcrusoe@msu.edu>

    * doc/dev/coding-guidelines-and-review.txt: Clarify pull request checklist
    * CONTRIBUTING.md: update URL to new dev docs

2014-08-30  Rhys Kidd  <rhyskidd@gmail.com>

    * khmer/_khmermodule.cc: fix table.get("wrong_length_string") gives core dump
    * lib/kmer_hash.cc: improve quality of exception error message
    * tests/{test_counting_hash,test_counting_single,test_hashbits,
        test_hashbits_obj}.py: add regression unit tests

2014-08-28  Titus Brown  <titus@idyll.org>

    * scripts/normalize-by-median.py: added reporting output after main loop
	exits, in case it hadn't been triggered.
    * sandbox/saturate-by-median.py: added flag to change reporting frequency,
	cleaned up leftover code from when it was copied from
	normalize-by-median.

2014-08-24  Rhys Kidd  <rhyskidd@gmail.com>

    * khmer/thread_utils.py, sandbox/filter-below-abund.py,
	scripts/{extract-long-sequences,load-graph,load-into-counting,
	normalize-by-median,split-paired-reads}.py,
	scripts/galaxy/gedlab.py: fix minor PyLint issues 

2014-08-20  Michael R. Crusoe  <mcrusoe@msu.edu>

    * test/test_version.py: add Python2.6 compatibility.

2014-08-20  Rhys Kidd  <rhyskidd@gmail.com>

    * setup.py,README.rst,doc/user/install.txt: Test requirement for a 
    64-bit operating system, documentation changes. Fixes #529

2014-08-19  Michael R. Crusoe  <mcrusoe@msu.edu>

    * {setup,versioneer,khmer/_version}.py: upgrade versioneer from 0.10 to 0.11

2014-08-18  Michael R. Crusoe  <mcrusoe@msu.edu>

    * setup.py: Use the system bz2 and/or zlib libraries if specified in
    setup.cfg or overridden on the commandline
