@@ -1,9 +1,11 @@
 2014-09-07  Titus Brown  <titus@idyll.org>
 
+    * sandbox/calc-median-distribution.py: catch exceptions generated by reads
+	shorter than k in length.
     * sandbox/collect-reads.py: added script to collect reads until specific
-	average cutoff
+	average cutoff.
     * sandbox/slice-reads-by-coverage.py: added script to extract reads with
-	a specific coverage slice (based on median k-mer abundance)
+	a specific coverage slice (based on median k-mer abundance).
 
 2014-09-01  Michael R. Crusoe  <mcrusoe@msu.edu>
 
